# ai-memory

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/ai-memory-cli/src/: cli.rs  config.rs
crates/ai-memory-cli/src/commands/: lint.rs  serve.rs
crates/ai-memory-cli/templates/: config.default.toml
crates/ai-memory-cli/tests/: uninstall.rs
crates/ai-memory-consolidate/prompts/: batch_consolidate_system.md  single_consolidate_system.md
crates/ai-memory-consolidate/src/: auto_improve_telemetry.rs  bootstrap.rs  lint.rs
crates/ai-memory-consolidate/tests/: lifecycle.rs
crates/ai-memory-core/src/: error.rs  lib.rs  routing_snippet.rs  user.rs
crates/ai-memory-hooks/src/: router.rs
crates/ai-memory-llm/: Cargo.toml
crates/ai-memory-llm/src/: openai_compat.rs
crates/ai-memory-mcp/src/: admin.rs  server.rs
crates/ai-memory-mcp/tests/: admin_bootstrap.rs
crates/ai-memory-store/: Cargo.toml
crates/ai-memory-store/migrations/: V14__users.sql
crates/ai-memory-store/src/: auto_improve.rs  error.rs  lib.rs  migrations.rs  ops.rs  reader.rs  users.rs  writer.rs
docs/: ARCHITECTURE.md  auto-improvement-loop.md  design-decisions.md  install.md  macos.md  usage.md  windows.md
docs/superpowers/specs/: 2026-05-24-uninstall-command-design.md  2026-05-25-uninstall-dryrun-purge-preview-design.md
