[package]
name = "ai-memory-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LLM provider trait with typed Anthropic, OpenAI and OpenAI-compat clients."

[dependencies]
ai-memory-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
secrecy.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
async-trait.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
